# athutils

./: README.md  pyproject.toml  setup.py
athutils/: __init__.py
athutils/vis/: __init__.py
scripts/: example_workflow.py  plot_examples.py
src/athutils/: __init__.py
src/athutils/io/: ReadAthena.py  __init__.py
src/athutils/vis/: __init__.py  plot_mach.py  plot_slice.py  plotting.py
src/io/: ReadAthena.py  __init__.py  save_mach_column.py
src/vis/: plot_column.py
